# tcp_handler_service

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
k8s/: 01-deployment.yml  02-service.yml  03-ingress.yml  04-cert-manager-issuer.yml  05-config-map.yml
src/: handler.rs  kafka.rs  main.rs  model.rs  serializer.rs
