[package]
name = "tcp_handler_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
kafka = "0.9.0"
serde_json = "1.0.89"
serde = {version = "1.0", features = ["derive"]}
openssl-sys = "0.9.80"
